--- a/config/database.yml
+++ b/config/database.yml
@@ -2,20 +2,20 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
-  username: boilerplate_app
+  username: wuff 
 
 
 development:
   <<: *default
-  database: boilerplate_app_dev
+  database: machote_app_dev
 
 test: &test
   <<: *default
-  database: boilerplate_app_test
+  database: machote_app_test
 
 production:
   <<: *default
-  database: boilerplate_app_prod
+  database: machote_app_prod
 
 cucumber:
   <<: *test
